force-app/main/default/objects/Campaign/fields/Number_Registered_Attended_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_Registered_Attended_Participants__c</fullName>
    <description>The sum of the Number of Participants (e.g Students) at any of the following Statuses: Applicant, Attendee, Completer, Not Registered - Attended, Participant, Registered, Registered - Attended, Saver</description>
    <inlineHelpText>The sum of the Number of Participants (e.g Students) at any of the following Statuses: Applicant, Attendee, Completer, Not Registered - Attended, Participant, Registered, Registered - Attended, Saver</inlineHelpText>
    <label>Number Registered/Attended Participants</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>The sum of the Number of Guests at any of the following Statuses: Applicant, Attendee, Completer, Not Registered - Attended, Participant, Registered, Registered - Attended, Saver</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>