force-app/main/default/objects/Campaign/fields/Parking_Details__c.field-meta.xml
<CustomField>
    <fullName>Parking_Details__c</fullName>
    <description>Provides parking details for the event. This will be used for email and mailers.</description>
    <label>Parking Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>