force-app/main/default/objects/Campaign/fields/Parking_URL__c.field-meta.xml
<CustomField>
    <fullName>Parking_URL__c</fullName>
    <description>URL associated with parking details.</description>
    <label>Parking URL</label>
    <type>Url</type>
</CustomField>