force-app/main/default/objects/Campaign/fields/Presented_By_URL__c.field-meta.xml
<CustomField>
    <fullName>Presented_By_URL__c</fullName>
    <label>Presented By URL</label>
    <type>Url</type>
</CustomField>