force-app/main/default/objects/Campaign/fields/Printable_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Printable_Campaign_Name__c</fullName>
    <description>Printable Campaign Name</description>
    <label>Printable Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>