force-app/main/default/objects/Campaign/fields/Printable_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Printable_Day_of_Month__c</fullName>
    <formula>TEXT(DAY(Event_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DO NOT USE) Printable Day of Month</label>
    <type>Text</type>
</CustomField>