force-app/main/default/objects/Campaign/fields/Printable_Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Printable_Event_Start_Date__c</fullName>
    <description>Set automatically via workflow, using the ASU Communication Guide style (e.g. Tuesday, February 1, 2012). However, can be manually overridden.</description>
    <inlineHelpText>Set automatically via workflow, using the ASU Communication Guide style (e.g. Tuesday, February 1, 2012). However, can be manually overridden.</inlineHelpText>
    <label>Printable Event Start Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>