force-app/main/default/objects/Campaign/fields/Program_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>Program_Recruitment__c</fullName>
    <label>Program Recruitment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barrett Summer Scholars</fullName>
            </value>
            <value>
                <fullName>Summer Enrichment</fullName>
            </value>
            <value>
                <fullName>Future Sun Devil Families</fullName>
            </value>
            <value>
                <fullName>Hispanic Mother Daughter Program</fullName>
            </value>
            <value>
                <fullName>Earn to Learn</fullName>
            </value>
            <value>
                <fullName>Collegiate Scholars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>