force-app/main/default/objects/Campaign/fields/Program_Recruitment_Details__c.field-meta.xml
<CustomField>
    <fullName>Program_Recruitment_Details__c</fullName>
    <inlineHelpText>If Other is selected on Program Recruitment, please enter a description.</inlineHelpText>
    <label>Program Recruitment Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>