force-app/main/default/objects/Campaign/fields/Registration_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Registration_Deadline__c</fullName>
    <description>Last day person can register for the event.</description>
    <inlineHelpText>Optional - Last day person can register for the event.</inlineHelpText>
    <label>Registration Deadline</label>
    <type>Date</type>
</CustomField>