force-app/main/default/objects/Campaign/fields/Registration_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Time__c</fullName>
    <description>Time the participant should check-in. Use the ASU Communication Guide styles (e.g. 10 a.m., noon, 1:30 p.m.).</description>
    <inlineHelpText>Time the participant should check-in. Use the ASU Communication Guide styles (e.g. 10 a.m., noon, 1:30 p.m.).</inlineHelpText>
    <label>Registration Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>