force-app/main/default/objects/Campaign/fields/Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_URL__c</fullName>
    <description>Registration URL where participant can RSVP.</description>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>