force-app/main/default/objects/Campaign/fields/Requested__c.field-meta.xml
<CustomField>
    <fullName>Requested__c</fullName>
    <description>College, school or department who requested this Campaign.</description>
    <inlineHelpText>College, school or department who requested this Campaign.</inlineHelpText>
    <label>Department / College</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Alliances</fullName>
            </value>
            <value>
                <fullName>Barrett The Honors College</fullName>
            </value>
            <value>
                <fullName>College of Public Programs</fullName>
            </value>
            <value>
                <fullName>Coll Technology &amp; Innovation</fullName>
            </value>
            <value>
                <fullName>Corporate Relations</fullName>
            </value>
            <value>
                <fullName>Cronkite School-Journ/MassComm</fullName>
            </value>
            <value>
                <fullName>Edplus Marketing</fullName>
            </value>
            <value>
                <fullName>Enrollment Services</fullName>
            </value>
            <value>
                <fullName>Graduate Education</fullName>
            </value>
            <value>
                <fullName>Health Solutions</fullName>
            </value>
            <value>
                <fullName>Herberger Institute</fullName>
            </value>
            <value>
                <fullName>Herberger Institute - Art</fullName>
            </value>
            <value>
                <fullName>Herberger Institute - Dance</fullName>
            </value>
            <value>
                <fullName>Herberger Institute - Design</fullName>
            </value>
            <value>
                <fullName>Herberger Institute - Digital Culture</fullName>
            </value>
            <value>
                <fullName>Herberger Institute - Film</fullName>
            </value>
            <value>
                <fullName>Herberger Institute - Music</fullName>
            </value>
            <value>
                <fullName>Herberger Institute - Theatre</fullName>
            </value>
            <value>
                <fullName>Ira A Fulton Engineering</fullName>
            </value>
            <value>
                <fullName>Ira A Fulton Engineering - CBBG</fullName>
            </value>
            <value>
                <fullName>Ira A Fulton Engineering - FSE Outreach</fullName>
            </value>
            <value>
                <fullName>Ira A Fulton Engineering - Polytechnic</fullName>
            </value>
            <value>
                <fullName>Lake Havasu</fullName>
            </value>
            <value>
                <fullName>Liberal Arts &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>MaryLouFulton Teachers College</fullName>
            </value>
            <value>
                <fullName>New Interdis Arts &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>Nursing &amp; Health Innovation</fullName>
            </value>
            <value>
                <fullName>O'Connor College of Law</fullName>
            </value>
            <value>
                <fullName>Public Service Academy</fullName>
            </value>
            <value>
                <fullName>School for the Future of Innovation in Society</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>