force-app/main/default/objects/Campaign/fields/School_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to list the associated school for the event. Ex: high school or community college</description>
    <inlineHelpText>Includes Elementary, Middle, Junior High, High School, College or University.</inlineHelpText>
    <label>Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>External Mastered Org, SF Mastered Org</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Institution</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>