force-app/main/default/objects/Campaign/fields/SP_Venue_Information_1__c.field-meta.xml
<CustomField>
    <fullName>SP_Venue_Information_1__c</fullName>
    <description>Description of the venue. First line is name, 2nd and 3rd line are additional information.</description>
    <inlineHelpText>For Silverpop integration. The name of the venue, e.g. Arizona State University, Tempe Campus or Pointe Hilton Squaw Peak Resort.</inlineHelpText>
    <label>Venue Information 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>