force-app/main/default/objects/Campaign/fields/SP_Venue_Information_2__c.field-meta.xml
<CustomField>
    <fullName>SP_Venue_Information_2__c</fullName>
    <description>Description of the venue. First line is name, 2nd and 3rd line are additional information.</description>
    <inlineHelpText>For Silverpop integration. Address or campus location, e.g. 7677 N. 16 St. or Memorial Union, Ventana Ballroom.</inlineHelpText>
    <label>Venue Information 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>