force-app/main/default/objects/Campaign/fields/SP_Venue_Information_3__c.field-meta.xml
<CustomField>
    <fullName>SP_Venue_Information_3__c</fullName>
    <description>Description of the venue. First line is name, 2nd and 3rd line are additional information.</description>
    <inlineHelpText>For Silverpop integration. The city, state, and/or ZIP code, e.g. Phoenix, AZ 85020.</inlineHelpText>
    <label>Venue Information 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>