force-app/main/default/objects/Campaign/fields/Sparks_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Sparks_Involvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the event has SPARKS involvement. This is used by EOSS Event record type only.</description>
    <inlineHelpText>Check indicates that the event is SPARKS related.</inlineHelpText>
    <label>Sparks Involvement</label>
    <type>Checkbox</type>
</CustomField>