force-app/main/default/objects/Campaign/fields/Subscription_Center_Description__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Center_Description__c</fullName>
    <description>Used for Subscription Center record types - If this campaign is marked Visible on Subscription Center, this text will display on the Subscription Center page. 500 character limit.</description>
    <inlineHelpText>Used for Subscription Center record types - If this campaign is marked Visible on Subscription Center, this text will display on the Subscription Center page. 500 character limit.</inlineHelpText>
    <label>MC Subscription Center Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>