force-app/main/default/objects/Campaign/fields/Subscription_Center_Topic__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Center_Topic__c</fullName>
    <description>Used for Subscription Center record types to indicate what top level topic to be nested under.</description>
    <inlineHelpText>Used for Subscription Center record types to indicate what top level topic to be nested under.</inlineHelpText>
    <label>MC Subscription Center Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academics</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Giving</fullName>
            </value>
            <value>
                <fullName>News/Events</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>