force-app/main/default/objects/Campaign/fields/Target_Population_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Population_Field__c</fullName>
    <description>Identifies population of interest. This is used by EOSS Event record type only.</description>
    <inlineHelpText>Population of interest</inlineHelpText>
    <label>Target Population</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Native American</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>