force-app/main/default/objects/Campaign/fields/Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[data entry] - Used to filter out Test Campaigns</description>
    <label>Test Record</label>
    <type>Checkbox</type>
</CustomField>