force-app/main/default/objects/Campaign/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>[Populated by Recruitment users who create campaigns]-Identifies the primary population the campaign is targeting.</description>
    <inlineHelpText>Use this field to further define the audience type or primary population this Campaign is targeting.</inlineHelpText>
    <label>Transfer</label>
    <type>Checkbox</type>
</CustomField>