force-app/main/default/objects/Campaign/fields/Visible_on_Subscription_Center__c.field-meta.xml
<CustomField>
    <fullName>Visible_on_Subscription_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on Subscription Center record types to indicate if it should be visible on the Subscription Center page. If true, it will show on the page.</description>
    <inlineHelpText>Used on Subscription Center record types to indicate if it should be visible on the Subscription Center page. If true, it will show on the page.</inlineHelpText>
    <label>MC Visible on Subscription Center</label>
    <type>Checkbox</type>
</CustomField>