force-app/main/default/objects/Campaign/fields/Wait_List_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Wait_List_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wait List Allowed</label>
    <type>Checkbox</type>
</CustomField>