force-app/main/default/objects/Campaign/recordTypes/Cohort.recordType-meta.xml
<RecordType>
    <fullName>Cohort</fullName>
    <active>true</active>
    <description>Record type used to group Leads and Contacts into specific constituent groups.</description>
    <label>Cohort</label>
</RecordType>