force-app/main/default/objects/Campaign/recordTypes/Corporate_Relations.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Relations</fullName>
    <active>true</active>
    <description>Record type used for Corporate Relations</description>
    <label>Corporate Relations</label>
</RecordType>