force-app/main/default/objects/Campaign/recordTypes/Course.recordType-meta.xml
<RecordType>
    <fullName>Course</fullName>
    <active>true</active>
    <description>Record type used for managing enrollment in online courses.</description>
    <label>Course</label>
</RecordType>