force-app/main/default/objects/Campaign/recordTypes/EOSS_Event.recordType-meta.xml
<RecordType>
    <fullName>EOSS_Event</fullName>
    <active>true</active>
    <description>Record type used for events specific to Educational Outreach and Student Services (EOSS)</description>
    <label>EOSS Event</label>
</RecordType>