force-app/main/default/objects/Campaign/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Record type used for events both on and off campus.</description>
    <label>Event</label>
</RecordType>