force-app/main/default/objects/Campaign/recordTypes/Interest.recordType-meta.xml
<RecordType>
    <fullName>Interest</fullName>
    <active>true</active>
    <description>Record type used for prospective student interest tracking.</description>
    <label>Interest</label>
</RecordType>