force-app/main/default/objects/Campaign/recordTypes/Marketing.recordType-meta.xml
<RecordType>
    <fullName>Marketing</fullName>
    <active>true</active>
    <description>Record type used for email and print mailing communication.</description>
    <label>Communication</label>
</RecordType>