force-app/main/default/objects/Campaign/recordTypes/Other_Source.recordType-meta.xml
<RecordType>
    <fullName>Other_Source</fullName>
    <active>true</active>
    <description>Record type used for List Loads, Web Forms and other non-Event, non-Scholarship Sources.</description>
    <label>Other Source</label>
</RecordType>