force-app/main/default/objects/Campaign/recordTypes/Scholarship.recordType-meta.xml
<RecordType>
    <fullName>Scholarship</fullName>
    <active>true</active>
    <description>Record type used to track interest and eligibility for specific scholarships and scholarship programs.</description>
    <label>Scholarship</label>
</RecordType>