force-app/main/default/objects/Campaign/recordTypes/Subscription_Center.recordType-meta.xml
<RecordType>
    <fullName>Subscription_Center</fullName>
    <active>true</active>
    <description>Record type used for Marketing Cloud Subscription Center</description>
    <label>Subscription Center</label>
</RecordType>