force-app/main/default/objects/Campaign/validationRules/Event_End_Time_Format_is_Incorrect.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_End_Time_Format_is_Incorrect</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
LEN ( Event_End_Time__c ) = 0,
or (REGEX( Event_End_Time__c , "[1-9]{1}:[0-5]{1}[0,5]{1} [a.m.,p.m.]{4}"),
(REGEX( Event_End_Time__c , "[1]{1}[0-1]{1}:[0-5]{1}[0,5]{1} [a.m.,p.m.]{4}")),
(REGEX( Event_End_Time__c ,"[1]{1}[2]{1}:[0-5]{1}[0,5]{1} [a.m.,p.m.]{4}")),
(REGEX( Event_End_Time__c , "[1-9]{1} [a.m.,p.m.]{4}")),
(REGEX( Event_End_Time__c , "[1]{1}[0-1]{1} [a.m.,p.m.]{4}")),
(REGEX (Event_End_Time__c, "[a-z]{4}")))))</errorConditionFormula>
    <errorDisplayField>Event_End_Time__c</errorDisplayField>
    <errorMessage>Use the ASU Communication Guide styles (e.g.  10 a.m. - noon - 1:30 p.m.), 5 minute increments only. https://commguide.asu.edu/standards/writing/days</errorMessage>
</ValidationRule>