force-app/main/default/objects/Campaign/validationRules/Registration_Time_format_is_Incorrect.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Time_format_is_Incorrect</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
LEN ( Registration_Time__c) = 0,
or (REGEX( Registration_Time__c , "[1-9]{1}:[0-5]{1}[0,5]{1} [a.m.,p.m.]{4}"),
(REGEX( Registration_Time__c , "[1]{1}[0-1]{1}:[0-5]{1}[0,5]{1} [a.m.,p.m.]{4}")),
(REGEX( Registration_Time__c ,"[1]{1}[2]{1}:[0-5]{1}[0,5]{1} [a.m.,p.m.]{4}")),
(REGEX( Registration_Time__c , "[1-9]{1} [a.m.,p.m.]{4}")),
(REGEX( Registration_Time__c , "[1]{1}[0-1]{1} [a.m.,p.m.]{4}")),
(REGEX (Registration_Time__c, "[a-z]{4}")))))</errorConditionFormula>
    <errorDisplayField>Registration_Time__c</errorDisplayField>
    <errorMessage>Use the ASU Communication Guide styles (e.g 10 a.m, noon, 1:30 p.m.), 5 minute increments only. https://commguide.asu.edu/standards/writing/days</errorMessage>
</ValidationRule>