force-app/main/default/objects/Campaign/validationRules/Require_DepartmentCollege.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_DepartmentCollege</fullName>
    <active>true</active>
    <description>Require "Department/College" on College Department Event Types</description>
    <errorConditionFormula>AND(
RecordType.Name = 'Event',
ISPICKVAL(Type, 'College Department Events'),
ISBLANK(Requested__c)  
)</errorConditionFormula>
    <errorDisplayField>Requested__c</errorDisplayField>
    <errorMessage>If this is a College Department Event, then Department / College cannot be left blank.</errorMessage>
</ValidationRule>