force-app/main/default/objects/Campaign/validationRules/Subscription_Center_MC_BU_is_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Subscription_Center_MC_BU_is_not_blank</fullName>
    <active>true</active>
    <description>If the campaign is for the subscription center, then make sure the business unit field is not blank.</description>
    <errorConditionFormula>AND(
RecordType.Name = 'Subscription Center',
ISBLANK( Marketing_Cloud_Business_Unit__c )
)</errorConditionFormula>
    <errorMessage>Please enter in a Marketing Cloud Business Unit.</errorMessage>
</ValidationRule>