force-app/main/default/objects/Campaign/listViews/Admit_Campaigns.listView-meta.xml
<ListView>
    <fullName>Admit_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Record__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Admit</value>
    </filters>
    <label>Admit Campaigns</label>
    <sharedTo>
        <group>QA_Testing_Group</group>
        <role>ES_Enrollment_Services</role>
        <role>ES_Enrollment_Services_Communication</role>
    </sharedTo>
</ListView>