force-app/main/default/objects/Campaign/listViews/All_Completed_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Completed_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Test_Record__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Completed Status</label>
    <sharedTo>
        <role>ES_Enrollment_Services</role>
        <role>ES_Enrollment_Services_Communication</role>
    </sharedTo>
</ListView>