force-app/main/default/objects/Campaign/listViews/All_Test_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Test_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Test Campaigns</label>
    <sharedTo>
        <role>ES_Enrollment_Services_Communication</role>
    </sharedTo>
</ListView>