force-app/main/default/objects/Campaign/listViews/Barrett_Tour_West.listView-meta.xml
<ListView>
    <fullName>Barrett_Tour_West</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ID</columns>
    <columns>Campus_Location__c</columns>
    <columns>Event_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>Barrett Tour</value>
    </filters>
    <filters>
        <field>Campus_Location__c</field>
        <operation>equals</operation>
        <value>West</value>
    </filters>
    <filters>
        <field>Event_Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Barrett Tour West</label>
    <sharedTo>
        <group>Honors_Case</group>
    </sharedTo>
</ListView>